fixes anchor link and alignment of the logo | ETSL-1361

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/accessories-card.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/accessories-card.scss
@@ -819,6 +819,15 @@
     .eti-big-card-li {
       flex: 1;
     }
+    
+    @include respond-to-min($desktop-wide) {
+      margin: auto;
+      max-width: 1100px;
+    }
+
+    @include respond-to-min($desktop-large) {
+      max-width: none;
+    }
 
     .swiper-wrapper {
       padding: $padding-step-2 $padding-step-0;
